# CppSwiftyList

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  main.yml
Examples/: SLTests.cpp  main.cpp
SwiftyList/: SwiftyList.cpp  SwiftyList.hpp  main.cpp
SwiftyList.xcodeproj/: project.pbxproj
SwiftyList.xcodeproj/project.xcworkspace/xcuserdata/aleksandrdremov.xcuserdatad/xcdebugger/: Expressions.xcexplist
SwiftyList.xcodeproj/xcshareddata/xcschemes/: SwiftyList.xcscheme
SwiftyList.xcodeproj/xcuserdata/aleksandrdremov.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
SwiftyList.xcodeproj/xcuserdata/aleksandrdremov.xcuserdatad/xcschemes/: xcschememanagement.plist
SwiftyList/Logging/: GraphVizDumper.cpp  GraphVizDumper.hpp
